@@ -4,7 +4,7 @@
     <include name="Object_Info">
         <param name="hdsd_flag" default="false" />
         <param name="rottentomatoes" default="true" />
-        <param name="imdbvotes" default="true" />
+        <param name="imdbvotes" default="Skin.HasSetting(Ratings.IMDBVotes)" />
         <param name="usermeter" default="true" />
         <param name="imdb" default="true" />
         <param name="tmdb" default="true" />
